Image folder and path setup

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>portfolio</title>
+    <title>Rohit's portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" media="screen and (max-width:800px)" href="tablet.css">
     <link rel="stylesheet" media="screen and (max-width:530px)" href="phone.css">
@@ -27,30 +27,31 @@
     </nav>
     <section id="home">
         <div class="main">
-            <h1 class="headings"> HI I AM <br>ROHIT KATARA</h1>
-            <button class="btn">Hire Me </button>
+            <h1 class="headings"> Hi, I am <br>Rohit Katara</h1>
+            <button class="btn">Hire Me</button>
         </div>
     </section>
     <section id="about">
         <h1 class="headings">ABOUT ME</h1>
         <div id="pic">
-            <!-- <img src="img3.JPG" alt="photo"> -->
+            <img src="./images/img3.JPG" width="300x" height="480px" alt="photo">
+            </div>
             <div id="intro">
-                <h2>ROHIT KATARA</h2>
+                <!-- <h2>ROHIT KATARA</h2> -->
                 <p>I'm a first year undergraduate computer science engineering student in Madan mohan malaviya
-                    engineering college. I have made my degree course by my choice not based by chance . </p>
+                    engineering college. My degree programme was chosen by me rather than by chance. </p>
             </div>
     </section>
 
     <section id="portfolio">
         <h1 class="headings">PORTFOLIO</h1>
         <div class="gallery">
-            <img src="img1.jpg">
-            <img src="img2.jpg">
-            <img src="img33.jpg">
-            <img src="img4.jpg">
-            <img src="img6.jpg">
-            <img src="img7.jpg">
+            <img src="./images/img1.jpg">
+            <img src="./images/img2.jpg">
+            <img src="./images/img33.jpg">
+            <img src="./images/img4.jpg">
+            <img src="./images/img6.jpg">
+            <img src="./images/img7.jpg">
         </div>
     </section>
 
@@ -58,7 +59,7 @@
         <h1 class="headings">SKILLS</h1>
         <div class="row">
             <div class="box">
-                <img src="png1.png" alt="">
+                <img src="./images/png1.png" alt="">
                 <h1 class="headings">Website Design</h1>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde mollitia quas possimus ullam. Sit
                     asperiores numquam tenetur atque voluptate, excepturi non, ab recusandae nostrum adipisci totam
@@ -66,7 +67,7 @@
                     Aliquam</p>
             </div>
             <div class="box">
-                <img src="png2.jpg" alt="">
+                <img src="./images/png2.jpg" alt="">
                 <h1 class="headings">UX/UI <br> Design</h1>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde mollitia quas possimus ullam. Sit
                     asperiores numquam tenetur atque voluptate, excepturi non, ab recusandae nostrum adipisci totam
@@ -74,7 +75,7 @@
                     Aliquam</p>
             </div>
             <div class="box">
-                <img src="png4.png" alt="">
+                <img src="./images/png4.png" alt="">
                 <h1 class="headings">ADOBE Photoshop</h1>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde mollitia quas possimus ullam. Sit
                     asperiores numquam tenetur atque voluptate, excepturi non, ab recusandae nostrum adipisci totam
@@ -82,7 +83,7 @@
                     Aliquam</p>
             </div>
             <div class="box">
-                <img src="png3.png" alt="">
+                <img src="./images/png3.png" alt="">
                 <h1 class="headings">CLOUD </h1>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde mollitia quas possimus ullam. Sit
                     asperiores numquam tenetur atque voluptate, excepturi non, ab recusandae nostrum adipisci totam
