--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
         <h1 class="headings">ABOUT ME</h1>
         <div id="pic">
             <img src="./images/img3.JPG" width="300x" height="480px" alt="photo">
-            </div>
-            <div id="intro">
-                <!-- <h2>ROHIT KATARA</h2> -->
-                <p>I'm a first year undergraduate computer science engineering student in Madan mohan malaviya
-                    engineering college. My degree programme was chosen by me rather than by chance. </p>
-            </div>
+        </div>
+        <div id="intro">
+            <!-- <h2>ROHIT KATARA</h2> -->
+            <p>I'm a third year undergraduate computer science engineering student in Madan mohan malaviya
+                engineering college. My degree programme was chosen by me rather than by chance. </p>
+        </div>
     </section>
 
     <section id="portfolio">
